fix: ajuste overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,5 @@
 .app {
   height: 100dvh;
-  overflow: hidden;
 
   &--authenticated {
     display: grid;
